Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/common/rest/MissingAnnotationValue.out
MissingAnnotationValue.java:14:9: compiler.err.annotation.missing.default.value: A, field
1 error
