Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/common/rest/MissingAnnotationValue.java
/*
 * @test /nodynamiccopyright/
 * @bug 6843077 8006775
 * @summary check for missing annotation value
 * @author Mahmood Ali
 * @compile/fail/ref=MissingAnnotationValue.out -XDrawDiagnostics MissingAnnotationValue.java
 */

import java.lang.annotation.ElementType;
import java.lang.annotation.Target;

class MissingAnnotationValue {
  void test() {
    new @A String();
  }
}

@Target(ElementType.TYPE_USE)
@interface A { int field(); }
